_sass/pages/_garden.scss
.garden {
  /* Section: Header */
  /* TODO: Add back the map.
  .top-map {
    margin: -16px -24px;
    max-width: none;
  }
   */

  /* Section: Scheduled Activities */
  #calendar {
    height: 336px;
    overflow-x: auto;
    overflow-y: hidden;
    position: relative;
    top: -24px;

    .google-visualization-tooltip {
      border: none;
      box-shadow: none;
      background: #283142;
      border-radius: 0;
      color: #eceff1;
      font-size: 14px;

      .tooltip {
        padding: 4px 8px;

        strong {
          color: inherit;
        }

        em {
          font-style: inherit;
        }
      }
    }

    .google-visualization-tooltip-item-list {
      display: none;
    }

    + * + h4 {
      margin-top: 0;
    }
  }

  /* Section: Activity Log */
  .timeline {
    border-left: 2px solid #8eacbb;
    margin-left: 15px;
    margin-bottom: 24px;
    padding-bottom: 16px;

    &::after {
      content: "";
      display: block;
      border: 4px solid #8eacbb;
      border-left-color: transparent;
      border-top-color: transparent;
      position: absolute;
      bottom: 36px;
      left: 36px;
      transform: scaleY(2) rotate(45deg);
    }

    > p > strong:first-child:last-child {
      display: inline-block;
      position: relative;
      color: white;
      background: #455a64;
      left: 1px;
      padding: 4px 12px;
      line-height: 24px;
      font-size: 15px;

      &::before,
      &::after {
        display: block;
        position: absolute;
        background: inherit;
      }

      &::before {
        content: "";
        width: 10px;
        height: 10px;
        border-top: none;
        border-right: none;
        transform: rotate(45deg);
        left: -4px;
        top: 11px;
      }

      &::after {
        content: "date_range";
        font-family: 'Material Icons';
        font-weight: normal;
        font-size: 24px;
        line-height: 1;
        width: 32px;
        height: 32px;
        box-shadow: 0 0 0 2px white;
        padding: 4px;
        left: -40px;
        top: 0;
      }
    }

    > p,
    > ul {
      padding-left: 22px;
    }

    > ul > li {
      list-style-type: none;
    }

    em {
      color: #666;
    }
  }
}

